correção no conteúdo

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   href="https://drive.google.com/file/d/1lxR_Tn5A6EXDTrmNmHXuCNw10IwQB-dD/view?usp=sharing"
                   target="_blank"
                 >
-                  Curriculo
+                  Currículo
                 </a>
               </li>
               <li>
